--- a/app/frontend/package.json
+++ b/app/frontend/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@vueuse/core": "^14.1.0",
     "axios": "^1.13.3",
+    "axois": "^0.0.1-security",
     "pinia": "^3.0.4",
     "vue": "^3.5.26",
     "vue-router": "^4.6.4"
